[gd_scene load_steps=2 format=3 uid="uid://ckkdkqr08oy5x"]

[ext_resource type="Script" uid="uid://borp7720pomus" path="res://scene/setting_menu.gd" id="1_wb464"]

[node name="SettingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wb464")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "继续游戏"

[node name="RestartLevelButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "重新开始关卡"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "返回关卡选择"

[node name="StartMenuButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "返回开始菜单"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartMenuButton" to="." method="_on_start_menu_button_pressed"]
